# image_segmentation

./: .gitignore  README.md  pyproject.toml
configs/: params.yaml
logs/: metrics.csv
logs/model1/: metrics.csv
models/model1/: params.yaml
scripts/: check_model.ipynb  preprocessing.ipynb  training.ipynb
src/image_segmentation/: augm.py  dataset.py  model.py  predict.py  train.py  visualize.py
